Complete JDTLS simplification and update documentation
Co-authored-by: ottojvn <14881823+ottojvn@users.noreply.github.com>